welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: not found: value couleur
    if(couleur == Color.green){
       ^